--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,16 @@
 version: "3.8"
 services:
+  nginx:
+    build:
+      context: .
+      dockerfile: "Dockerfile.nginx"
+    container_name: kanban_nginx
+    ports:
+      - 80:80
+      - 443:443
+    links:
+      - kanban
+
   db:
     image: postgres:15
     container_name: kanban_db
