--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,6 +27,11 @@ services:
       start_period: 30s
       timeout: 10s
 
+  redis:
+    image: redis:7
+    container_name: redis
+    ports:
+      - 6379:6379
 
   kanban:
     build:
