--- a/.env-doc
+++ b/.env-doc
@@ -14,3 +14,8 @@ POSTGRES_PASSWORD=postgres
 
 REDIS_HOST=localhost
 REDIS_PORT=6379
+
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=465
+SMTP_USER=xxx
+SMTP_PASS=yyy
