added celery to dcompose

--- a/.env-doc
+++ b/.env-doc
@@ -12,7 +12,7 @@ POSTGRES_DB=kanban_db
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 
-REDIS_HOST=localhost
+REDIS_HOST=redis
 REDIS_PORT=6379
 
 SMTP_HOST=smtp.gmail.com
